[gd_scene load_steps=7 format=2]

[ext_resource path="res://Screens/Options/Options.gd" type="Script" id=1]
[ext_resource path="res://Screens/Main/Main.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 1 )

[node name="Options" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 13 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 512.0
margin_bottom = 300.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 152.0
margin_top = 74.0
margin_right = 359.0
margin_bottom = 226.0
rect_min_size = Vector2( 0, 120 )
custom_styles/panel = SubResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 204.0
margin_bottom = 149.0
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="Sound" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 201.0
margin_bottom = 20.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/Sound"]
margin_right = 47.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Master"
align = 1
valign = 1

[node name="MasterSlider" type="HSlider" parent="CenterContainer/PanelContainer/VBoxContainer/Sound"]
margin_left = 51.0
margin_top = 6.0
margin_right = 201.0
margin_bottom = 14.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 4
min_value = -20.0
max_value = 20.0
step = 2.0

[node name="Music" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 201.0
margin_bottom = 50.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/Music"]
margin_right = 47.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Music"
align = 1
valign = 1

[node name="MusicSlider" type="HSlider" parent="CenterContainer/PanelContainer/VBoxContainer/Music"]
margin_left = 51.0
margin_top = 6.0
margin_right = 201.0
margin_bottom = 14.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 4
min_value = -20.0
max_value = 20.0
step = 2.0

[node name="Fullscreen" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 201.0
margin_bottom = 80.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/Fullscreen"]
margin_left = 49.0
margin_right = 116.0
margin_bottom = 20.0
text = "Fullscreen"
align = 2

[node name="FullscreenCheckbox" type="CheckBox" parent="CenterContainer/PanelContainer/VBoxContainer/Fullscreen"]
margin_left = 136.0
margin_right = 152.0
margin_bottom = 20.0
focus_mode = 0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 14 )
custom_styles/hover_pressed = SubResource( 15 )
custom_styles/normal = SubResource( 14 )
enabled_focus_mode = 0
icon_align = 1

[node name="Lives" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 201.0
margin_bottom = 110.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/Lives"]
margin_left = 46.0
margin_right = 119.0
margin_bottom = 20.0
text = "One Hit Kill"
align = 2

[node name="OneHitKill" type="CheckBox" parent="CenterContainer/PanelContainer/VBoxContainer/Lives"]
margin_left = 139.0
margin_right = 155.0
margin_bottom = 20.0
focus_mode = 0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 14 )
custom_styles/hover_pressed = SubResource( 15 )
custom_styles/normal = SubResource( 14 )
pressed = true
enabled_focus_mode = 0
icon_align = 1

[node name="Done" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 201.0
margin_bottom = 146.0
text = "Done"

[connection signal="value_changed" from="CenterContainer/PanelContainer/VBoxContainer/Sound/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/VBoxContainer/Music/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="toggled" from="CenterContainer/PanelContainer/VBoxContainer/Fullscreen/FullscreenCheckbox" to="." method="_on_FullscreenCheckbox_toggled"]
[connection signal="toggled" from="CenterContainer/PanelContainer/VBoxContainer/Lives/OneHitKill" to="." method="_on_OneHitKill_toggled"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Done" to="." method="_on_Done_pressed"]
